--- a/iisacc/global.css
+++ b/iisacc/global.css
@@ -1,4 +1,4 @@
-html {
+:root {
 	font-family: 'Pretendard Light', sans-serif;
 }
 
@@ -7,18 +7,38 @@ html {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	padding: 2rem 0;
 }
 
 .VStak {
-	display: flex;
+	width: 100%;
+	max-width: 1440px;
+	margin: 32px auto;
+	display: flexbox;
 	flex-direction: column;
-	justify-content: center;
-	align-items: center;
 }
 
 .HStak {
-	display: flex;
+	width: 100%;
+	max-width: 1440px;
+	margin: 0 auto;
+	display: flexbox;
 	flex-direction: row;
-	justify-content: center;
-	align-items: center;
+}
+
+.HomeSectionContetnsBar {
+	background-color: #f5f5f5;
+	padding: 1.5rem;
+}
+
+.HomeSectionContetnsBar h2 {
+	font-family: 'Pretendard Bold', sans-serif;
+	margin-bottom: 1rem;
+	color: #333;
+}
+
+.content-box {
+	background-color: white;
+	padding: 1rem;
+	min-height: 120px;
 }
