--- a/iisacc/global.css
+++ b/iisacc/global.css
@@ -1,5 +1,41 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+html {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+}
+
+body {
+	max-width: 1440px;
+	min-width: 360px;
+	width: 100%;
+	height: 100%;
+	font-family: 'Pretendard', sans-serif;
+	background-color: #f5f5f5;
+	margin: 0 auto;
+}
+
+#app {
+	width: 100%;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
 :root {
 	font-family: 'Pretendard Light', sans-serif;
+	background-color: #F5F5F5;
+}
+
+a {
+	text-decoration: none;
 }
 
 .HeaderTitle {
@@ -14,7 +50,7 @@
 	width: 100%;
 	max-width: 1440px;
 	margin: 32px auto;
-	display: flexbox;
+	display: flex;
 	flex-direction: column;
 }
 
@@ -22,7 +58,7 @@
 	width: 100%;
 	max-width: 1440px;
 	margin: 0 auto;
-	display: flexbox;
+	display: flex;
 	flex-direction: row;
 }
 
