--- a/static/global.css
+++ b/static/global.css
@@ -16,7 +16,7 @@ body {
 	width: 100%;
 	height: 100%;
 	font-family: 'Pretendard', sans-serif;
-	background-color: #f5f5f5;
+	background-color: var(--color-background-primary);
 	margin: 0 auto;
 	display: flex;
 	flex-direction: column;
@@ -31,3 +31,19 @@ a {
 	text-transform: none;
 }
 
+:root {
+	--color-accent-blue: #007AFF;
+	--color-accent-red: #DB1111;
+	--color-accent-green: #3A9D3E;
+	--color-accent-yellow: #FFD30A;
+	--color-accent-orange: #FF9F21;
+	--color-accent-purple: #B90BFF;
+	--color-accent-cyan: #13FFD6;
+	--color-accent-indigo: #FFD30A;
+
+	--color-background-primary: #1E1E1E;
+
+	--color-text-primary: #EAECF6;
+	--color-text-secondary: #D7D8E1;
+	--color-text-disabled: #52535A;
+}
