--- a/static/global.css
+++ b/static/global.css
@@ -9,14 +9,14 @@ html {
 	height: 100%;
 	display: flex;
 	justify-content: center;
+	background-color: var(--color-background-primary);
 }
 
 body {
 	max-width: 1440px;
 	width: 100%;
 	height: 100%;
-	font-family: 'Pretendard', sans-serif;
-	background-color: var(--color-background-primary);
+	font-family: 'Pretendard';
 	margin: 0 auto;
 	display: flex;
 	flex-direction: column;
