Ready For P2PFoundationLink

--- a/static/global.css
+++ b/static/global.css
@@ -8,7 +8,8 @@
 	--color-accent-cyan: #13FFD6;
 	--color-accent-indigo: #FFD30A;
 
-	--color-background-primary: #1E1E1E;
+	--color-background-primary: #19191A;
+	--color-background-secondary: #3B3D40;
 
 	--color-text-primary: #EAECF6;
 	--color-text-secondary: #D7D8E1;
