--- a/static/global.css
+++ b/static/global.css
@@ -29,14 +29,12 @@
 
 * {
 	margin: 0;
-	padding: 0;
 	box-sizing: border-box;
 }
 
 html {
 	width: 100%;
 	display: flex;
-	justify-content: center;
 	background-color: var(--color-background-primary);
 }
 
@@ -45,6 +43,7 @@ body {
 	width: 100%;
 	height: 100%;
 	font-family: 'Pretendard';
+	color: var(--color-text-primary);
 	margin: 0 auto;
 	display: flex;
 	flex-direction: column;
@@ -58,7 +57,6 @@ p {
 	color: var(--color-text-secondary);
 }
 
- /*disable link text's underline */
 a {
 	text-decoration: none;
 	text-transform: none;
