--- a/static/global.css
+++ b/static/global.css
@@ -33,19 +33,20 @@
 
 html {
 	width: 100%;
-	display: flex;
 	background-color: var(--color-background-primary);
+	align-items: center;
 }
 
 body {
-	max-width: 720px;
+	max-width: 1440px;
 	width: 100%;
 	height: 100%;
 	font-family: 'Pretendard';
 	color: var(--color-text-primary);
-	display: flex;
+	/*display: flex;*/
 	flex-direction: column;
 	align-items: center;
+	margin: 0 auto;
 }
 
 p {
