--- a/static/global.css
+++ b/static/global.css
@@ -43,13 +43,14 @@ body {
 	height: 100%;
 	font-family: 'Pretendard';
 	color: var(--color-text-primary);
-	/*display: flex;*/
+	display: flex;
 	flex-direction: column;
 	align-items: center;
 	margin: 0 auto;
 }
 
 p {
+	max-width: 720px;
 	font-size: var(--text-body);
 	color: var(--color-text-secondary);
 }
