--- a/static/global.css
+++ b/static/global.css
@@ -65,10 +65,12 @@ a {
 }
 
 img {
-	width: auto;
+	width: 100%;
+	height: 100%;
 	max-width: 100%;
-	object-fit: contain;
+	aspect-ratio: 1 / 1;
+	object-fit: cover;
 	display: block;
 	margin: 0 auto;
+	border-radius: 12.5%;
 }
-
