--- a/static/global.css
+++ b/static/global.css
@@ -64,13 +64,13 @@ a {
 	color: inherit;
 }
 
-img {
-	width: 100%;
-	height: 100%;
-	max-width: 100%;
-	aspect-ratio: 1 / 1;
-	object-fit: cover;
-	display: block;
-	margin: 0 auto;
-	border-radius: 64px;
-}
+/*img {*/
+/*	width: 100%;*/
+/*	height: 100%;*/
+/*	max-width: 100%;*/
+/*	aspect-ratio: 1 / 1;*/
+/*	object-fit: cover;*/
+/*	display: block;*/
+/*	margin: 0 auto;*/
+/*	border-radius: 64px;*/
+/*}*/
